<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.pins.infinity.viewModels.applock.AppLockPinViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:background="@color/colorPrimary"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:onClick="@{() -> viewModel.homeCommand()}"
                android:src="@drawable/home_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="64dp"
            android:layout_height="66dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/app_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerConstraintLayout" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/appLock_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iconImageView" />

        <TextView
            android:id="@+id/subTitleTextView"
            style="@style/SubtitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/appLock_subTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pinEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small"
            android:layout_marginTop="@dimen/large"
            android:layout_marginEnd="@dimen/small"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subTitleTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/appLock_hint"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:singleLine="true"
                android:text="@={viewModel.pin}"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forgotPinCom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="32dp"
            android:background="@color/transparent"
            android:onClick="@{() -> viewModel.forgotPinCommand()}"
            android:text="@string/appLock_forgotPin"
            android:textColor="@color/underline_color"
            app:layout_constraintBottom_toTopOf="@+id/unlockButton"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/wrongPinTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/appLock_wrongPin_title"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="@{safeUnbox(viewModel.isWrongPinHintVisible ? View.VISIBLE : View.GONE)}"
            app:layout_constraintBottom_toTopOf="@+id/forgotPinCom"
            app:layout_constraintEnd_toEndOf="@+id/pinEditText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/pinEditText"
            app:layout_constraintTop_toBottomOf="@+id/pinEditText"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/unlockButton"
            android:layout_width="@dimen/button_primary_width"
            android:layout_height="@dimen/button_primary_height"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/medium"
            android:background="@drawable/base_button"
            android:gravity="center"
            android:onClick="@{() -> viewModel.unlockCommand()}"
            android:padding="@dimen/medium_small"
            android:text="@string/appLock_main_unLockButtonTitle"
            android:textColor="@color/base_color"
            android:textSize="@dimen/text_size_primary_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>