<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout">

    <data>

        <variable
            name="viewModel"
            type="com.pins.infinity.viewModels.applock.ForgotPinCheckCodeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:background="@color/colorPrimary"
            android:paddingLeft="@dimen/medium_small"
            android:paddingRight="@dimen/medium_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:onClick="@{() -> viewModel.onBackPressed}"
                android:src="@drawable/back_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/home"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:onClick="@{() -> viewModel.homeCommand()}"
                android:src="@drawable/home_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <View
            android:id="@+id/arcWhiteView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/main_gradient"
            android:paddingLeft="@dimen/medium_small"
            android:paddingRight="@dimen/medium_small"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerConstraintLayout">

        </View>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="81dp"
            android:layout_margin="@dimen/small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerConstraintLayout"
            app:srcCompat="@drawable/ic_anti_theft" />

        <TextView
            android:id="@+id/imageTitleTextView"
            style="@style/TitleWhiteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small"
            android:text="@string/appLock_main_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/vectorImageView"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/arc_image" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />


        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small"
            android:layout_marginEnd="@dimen/small"
            android:text="@string/appLock_forgotPin_mainTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <TextView
            android:id="@+id/subTitleTextView"
            style="@style/SubtitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large"
            android:layout_marginTop="@dimen/medium"
            android:layout_marginEnd="@dimen/large"
            android:text="@string/appLock_forgotPin_sms_subTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pinEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small"
            android:layout_marginTop="@dimen/medium"
            android:layout_marginEnd="@dimen/small"
            android:inputType="textNoSuggestions|numberPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subTitleTextView">

            <EditText
                android:id="@+id/firstEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/appLock_forgotPin_sms_hint"
                android:inputType="textNoSuggestions|textImeMultiLine|phone"
                android:singleLine="true"
                android:text="@={viewModel.code}"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/appLock_forgotPin_sms_error"
            android:textColor="@android:color/holo_red_light"
            android:textSize="12sp"
            app:isVisible="@{viewModel.isWrongCode}"
            app:layout_constraintEnd_toEndOf="@+id/pinEditText"
            app:layout_constraintStart_toStartOf="@+id/pinEditText"
            app:layout_constraintTop_toBottomOf="@+id/pinEditText" />

        <TextView
            android:id="@+id/warningTextView"
            style="@style/SubtitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large"
            android:text="@string/appLock_forgotPin_sms_warning"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/unlockButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorTextView" />

        <Button
            android:id="@+id/unlockButton"
            android:layout_width="@dimen/button_primary_width"
            android:layout_height="@dimen/button_primary_height"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/medium"
            android:background="@drawable/base_button"
            android:gravity="center"
            android:onClick="@{() -> viewModel.continueCommand()}"
            android:padding="@dimen/medium_small"
            android:text="@string/continue_title"
            android:textColor="@color/base_color"
            android:textSize="@dimen/text_size_primary_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>