<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.pins.infinity.viewModels.emailVerification.EmailVerifyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:background="@color/colorPrimary"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/back_btn"
                android:onClick="@{viewModel.onBackPressed}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/chooseTitleTextView"
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small"
            android:layout_marginRight="@dimen/small"
            android:layout_marginBottom="8dp"
            android:text="@string/emailVerification_title"
            app:layout_constraintBottom_toTopOf="@+id/chooseDescriptionTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/chooseDescriptionTextView"
            style="@style/SubtitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailVerification_description"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstTextInputLayout"
            android:theme="@style/TextInputLayoutAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline">

            <EditText
                android:id="@+id/secondEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/emailVerification_hint"
                android:inputType="textImeMultiLine|textNoSuggestions"
                android:text="@={viewModel.userEmail}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/continueButton"
            android:layout_width="@dimen/button_primary_width"
            android:layout_height="@dimen/button_primary_height"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/medium"
            android:background="@drawable/base_button"
            android:gravity="center"
            android:padding="@dimen/medium_small"
            android:text="@string/continue_title"
            android:textColor="@color/base_color"
            android:textSize="@dimen/text_size_primary_button"
            android:onClick="@{() -> viewModel.continueCommand()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>